src/App.css
.text-left {
  text-align: left;
}
.text-right {
  text-align: right;
}

.pt-table-column-name {
  font-weight: bold;
}

.formula {
  margin: -8px 4px 4px 9px;
  color: #5c7080; /* text-color-muted */
}

.no-edit {
  background-color: #f5f8fa; /* light gray 5 */
}

.footer {
  border-top: 1px solid #738694; /* gray 2 */
  font-weight: bold;
  background-color: #f5f8fa; /* light gray 5 */
}
.footer .summary {
  color: #5c7080; /* text-color-muted */
  font-weight: normal;
}

.start-page {
  margin: auto;
  padding: 20px;
  max-width: 1000px;
}

.big-actions {
  display: flex;
  margin: 0 -20px;
}
.big-actions .pt-card {
  width: 50%;
  margin: 20px;
}

.logo-and-text * {
  display: inline-block;
  vertical-align: middle;
}
.logo-and-text img {
  height: 30px;
  margin-right: 5px;
}

html,
body,
#root,
.App {
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow: auto;
}

.pt-tree {
  min-width: 200px;
}

